# bevy_github_ci_template

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yaml  github_pages.yaml  github_releases.yaml  itchio.yaml  linux.yaml  macos.yaml  publish.itch.io.yaml  release.yaml  web.yaml  windows.yaml
apple/: Makefile  build_rust_deps.sh
apple/bevy_github_ci_template.xcodeproj/: .gitignore  project.pbxproj
apple/src/: Info.plist
src/: lib.rs  main.rs
wasm/: index.html
